Add content and formatting to footer on home page
This commit will add the additional text and logo to the footer
on the home page. It will also format it. It also adds the two
logos in svg format.

--- a/style.css
+++ b/style.css
@@ -40,3 +40,13 @@ body {
   border-radius: 50px;
   margin: 0px 0px 0px 0px !important;
 }
+
+footer {
+  background-color: black;
+  color: white;
+  padding: 150px 100px;
+}
+
+.med-section-titles {
+  margin-bottom: 20px;
+}
