Switch png logos with svgs and add footer to all
This commit will add the footer to all of the remaining pages
that exist. It also formats it slightly better and replaces the
png logo files with the svg ones uploaded in the previous commit.

--- a/style.css
+++ b/style.css
@@ -50,3 +50,9 @@ footer {
 .med-section-titles {
   margin-bottom: 20px;
 }
+
+.copyright-line {
+  margin: 50px 10px;
+  display: flex;
+  justify-content: center;
+}
