--- a/style.css
+++ b/style.css
@@ -14,20 +14,25 @@
       z-index: -1; } }
 
 .menu-bar {
-  padding: 0px;
+  padding: 0rem;
+}
+
+.navbar {
+  padding: 3rem 0rem;
 }
 
 .navbar-nav {
-  margin: 10px 30px 10px auto !important;
+  margin: 0rem 1rem 0rem auto !important;
   justify-content: right;
 }
 
 .nav-item {
-  margin: 20px;
+  margin: 0rem 1rem;
 }
 
 .navbar-brand {
-  margin: 0px 0px 0px 0px !important;
+  margin: 0rem !important;
+  padding: 0rem !important;
 }
 
 body {
@@ -45,7 +50,7 @@ footer {
   background-color: black;
   color: white;
   padding: 150px 100px;
-  margin: 0px 0px 50px;
+  margin-bottom: 3rem;
 }
 
 .footer-logo {
